--- a/MSGViewWPF/MSGViewWPF.csproj
+++ b/MSGViewWPF/MSGViewWPF.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MSGLogic\MSGLogic.csproj" />
+  </ItemGroup>
+
 </Project>
