--- a/MSGViewWPF/App.config
+++ b/MSGViewWPF/App.config
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="rows" value="2" />
-    <add key="columns" value="2" />
+    <add key="Rows" value="2" />
+    <add key="Columns" value="2" />
+	  <add key="TileSize" value="100" />
   </appSettings>
 </configuration>
